# krypin

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  openapi.yaml  postgresql.yaml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: sanity.yml
adapter-mqtt/: Cargo.toml  README.md
adapter-mqtt/src/: lib.rs
adapter-sdk/: Cargo.toml  README.md
adapter-sdk/examples/template-adapter/: Cargo.toml
adapter-sdk/examples/template-adapter/src/: main.rs
adapter-sdk/src/: hvac.rs  lib.rs  light.rs  meta.rs  robotvac.rs  runtime.rs  sensor.rs  switch.rs  zigbee.rs
adapter-sdk/tests/: binary_sensor.rs  hvac.rs  light.rs  robotvac.rs  runtime.rs  switch.rs  zigbee.rs
automations/: Cargo.toml
automations/src/: lib.rs  samples.rs
cmd/krypin/: devicereg.go  main.go
db/migrations/: 000001_create_device_table.down.sql  000001_create_device_table.up.sql
devicereg/: device.go  svc.go
devicereg/entity/: feature.go  light.go  sensor.go  switch.go  units.go
devicereg/repository/: insert.go  models.go  select.go
devicereg/service/: device.go  helpers.go  state.go
devicereg/transport/: endpoint.http.go  handler.pubsub.go  handler.socket.go
devicereg/transport/http/: server.go
devicereg/transport/pubsub/: server.go
devicereg/transport/socket/: server.go
docs/: bus.md
hub-core/: Cargo.toml
hub-core/migrations/: 0001_init.sql
hub-core/src/: bus.rs  bus_contract.rs  lib.rs  model.rs  storage.rs
hub-core/src/cap/: hvac.rs  light.rs  mod.rs  robotvac.rs  sensor.rs  switch.rs
hub-core/tests/: bus_contract_adapter.rs  light_cap.rs  postgres_storage.rs
hubd/: Cargo.toml  README.md  build.rs
hubd/proto/: hub.proto
hubd/src/: config.rs  heartbeat.rs  lib.rs  main.rs  state.rs  telemetry.rs  wiring.rs
hubd/src/grpc/: mod.rs
hubd/src/http/: auth.rs  automation.rs  handlers.rs  mod.rs  routes.rs  ws.rs
hubd/src/subscribers/: automation.rs  device.rs  entity.rs  mod.rs  state.rs
hubd/tests/: auth.rs  bus_roundtrip.rs
internal/core/: logger.go  module.go  mqtt.go
internal/database/: database.go  error.go  middleware.go  types.go
internal/errors/: error.go
internal/event/: command.go  event.go
internal/pubsub/: pubsub.go
modules/shellies/: main.go
modules/shellies/commands/: handler.go
modules/shellies/constants/: const.go
modules/shellies/events/: events.go
modules/shellies/parse/: announce.go  info.go
pkg/actor/: actor.go
pkg/actor/mqttact/: mqtt.go
pkg/actor/ticker/: ticker.go
pkg/log/: logger.go
pkg/protocol/mqtt/: mqtt.go
pkg/timestamp/: timestamp.go  timestamp_test.go
pkg/websocket/: middleware.go  protocol.go  session.go  socket.go
