[package]
name = "adapter-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
hub-core = { path = "../hub-core" }
rumqttc = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "process"] }
tokio-stream = "0.1"
tracing = "0.1"
