[package]
name = "adapter-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

hub-core = { path = "../hub-core" }
