[package]
name = "hub-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bitflags = {version = "2.10.0", features = ["serde"]}
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = {version="0.1.17", features=["sync"]}
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
