[package]
name = "hubd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
bytes = "1.10.1"
chrono = "0.4.42"
hyper = "1.7.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version="1.48.0", features = ["rt-multi-thread", "macros", "signal", "test-util"]}
tokio-stream = {version="0.1.17", features=["sync"]}
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1.18.1"
hub-core = { path = "../hub-core" }
adapter-mqtt = { path = "../adapter-mqtt" }
anyhow = "1.0.100"
dotenv = "0.15.0"
url = "2.5.4"
