[package]
name = "template-adapter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
adapter-sdk = { path = "../.." }
hub-core = { path = "../../../hub-core" }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
